jpackage app launcher crashes on CentOS

XMLWordPrintable

    • 15
    • b09
    • linux

      With JDK-15, the RPM created via Jpackage fails to run and results in the following error:

      $ /opt/hellofx/bin/hellofx
      *** Error in `/opt/hellofx/bin/hellofx': free(): invalid pointer: 0x00007fb116c9ebc0 ***
      ======= Backtrace: =========
      /lib64/libc.so.6(+0x81299)[0x7fb1585a2299]
      /usr/lib64/libstdc++.so.6(_ZNSt6locale5_Impl16_M_install_facetEPKNS_2idEPKNS_5facetE+0x142)[0x7fb116a08ed2]
      /usr/lib64/libstdc++.so.6(_ZNSt6locale5_ImplC1Em+0x1e3)[0x7fb116a09323]
      /usr/lib64/libstdc++.so.6(+0x71295)[0x7fb116a0a295]
      /lib64/libpthread.so.0(+0x620b)[0x7fb151bb320b]
      /usr/lib64/libstdc++.so.6(+0x712e1)[0x7fb116a0a2e1]
      /usr/lib64/libstdc++.so.6(_ZNSt6localeC2Ev+0x13)[0x7fb116a0a323]
      /usr/lib64/libstdc++.so.6(_ZNSt8ios_base4InitC2Ev+0xbc)[0x7fb116a0717c]
      /usr/lib64/dri/swrast_dri.so(+0x85930)[0x7fb119feb930]
      /lib64/ld-linux-x86-64.so.2(+0xf9b3)[0x7fb158e049b3]
      /lib64/ld-linux-x86-64.so.2(+0x1458e)[0x7fb158e0958e]
      /lib64/ld-linux-x86-64.so.2(+0xf7c4)[0x7fb158e047c4]
      /lib64/ld-linux-x86-64.so.2(+0x13b7b)[0x7fb158e08b7b]
      /lib64/libdl.so.2(+0xfab)[0x7fb158bf1fab]
      /lib64/ld-linux-x86-64.so.2(+0xf7c4)[0x7fb158e047c4]
      /lib64/libdl.so.2(+0x15ad)[0x7fb158bf25ad]
      /lib64/libdl.so.2(dlopen+0x31)[0x7fb158bf2041]
      /lib64/libGLX_mesa.so.0(+0x4444c)[0x7fb13916944c]
      /lib64/libGLX_mesa.so.0(+0x4374a)[0x7fb13916874a]
      /lib64/libGLX_mesa.so.0(+0x1f138)[0x7fb139144138]
      /lib64/libGLX_mesa.so.0(+0x1a9d2)[0x7fb13913f9d2]
      /lib64/libGLX_mesa.so.0(+0x1b7c6)[0x7fb1391407c6]
      /lib64/libGLX.so.0(glXChooseFBConfig+0x31)[0x7fb139a6b6b1]
      /home/osboxes/.openjfx/cache/13/libprism_es2.so(Java_com_sun_prism_es2_X11GLFactory_nInitialize+0xa4)[0x7fb13a4a8494]
      [0x7fb13bc14250]
      ======= Memory map: ========
      c4c00000-c6000000 rw-p 00000000 00:00 0
      c6000000-d8800000 ---p 00000000 00:00 0
      d8800000-db000000 rw-p 00000000 00:00 0
      db000000-100000000 ---p 00000000 00:00 0
      100000000-1000e0000 rw-p 00000000 00:00 0
      1000e0000-140000000 ---p 00000000 00:00 0
      559830f38000-559831049000 r-xp 00000000 08:02 402875204 /opt/hellofx/bin/hellofx
      55983104a000-559831052000 r--p 00111000 08:02 402875204 /opt/hellofx/bin/hellofx
      559831052000-559831053000 rw-p 00119000 08:02 402875204 /opt/hellofx/bin/hellofx
      559831053000-559831056000 rw-p 00000000 00:00 0
      559831e53000-559831e85000 rw-p 00000000 00:00 0 [heap]
      7fb116783000-7fb116798000 r-xp 00000000 08:02 134217805 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
      7fb116798000-7fb116997000 ---p 00015000 08:02 134217805 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
      7fb116997000-7fb116998000 r--p 00014000 08:02 134217805 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
      7fb116998000-7fb116999000 rw-p 00015000 08:02 134217805 /usr/lib64/libgcc_s-4.8.5-20150702.so.1
      7fb116999000-7fb116a82000 r-xp 00000000 08:02 134327711 /usr/lib64/libstdc++.so.6.0.19
      7fb116a82000-7fb116c81000 ---p 000e9000 08:02 134327711 /usr/lib64/libstdc++.so.6.0.19
      7fb116c81000-7fb116c89000 r--p 000e8000 08:02 134327711 /usr/lib64/libstdc++.so.6.0.19
      7fb116c89000-7fb116c8b000 rw-p 000f0000 08:02 134327711 /usr/lib64/libstdc++.so.6.0.19
      7fb116c8b000-7fb116ca0000 rw-p 00000000 00:00 0
      7fb116ca0000-7fb1192cd000 r-xp 00000000 08:02 134398193 /usr/lib64/libLLVM-7-rhel.so
      7fb1192cd000-7fb1194cd000 ---p 0262d000 08:02 134398193 /usr/lib64/libLLVM-7-rhel.so
      7fb1194cd000-7fb1196c5000 r--p 0262d000 08:02 134398193 /usr/lib64/libLLVM-7-rhel.so
      7fb1196c5000-7fb1196eb000 rw-p 02825000 08:02 134398193 /usr/lib64/libLLVM-7-rhel.so
      7fb1196eb000-7fb119730000 rw-p 00000000 00:00 0
      7fb119730000-7fb119747000 r-xp 00000000 08:02 134342300 /usr/lib64/libelf-0.176.so
      7fb119747000-7fb119946000 ---p 00017000 08:02 134342300 /usr/lib64/libelf-0.176.so
      7fb119946000-7fb119947000 r--p 00016000 08:02 134342300 /usr/lib64/libelf-0.176.so
      7fb119947000-7fb119948000 rw-p 00017000 08:02 134342300 /usr/lib64/libelf-0.176.so
      7fb119948000-7fb119950000 r-xp 00000000 08:02 135297242 /usr/lib64/libdrm_amdgpu.so.1.0.0
      7fb119950000-7fb119b50000 ---p 00008000 08:02 135297242 /usr/lib64/libdrm_amdgpu.so.1.0.0
      7fb119b50000-7fb119b51000 r--p 00008000 08:02 135297242 /usr/lib64/libdrm_amdgpu.so.1.0.0
      7fb119b51000-7fb119b52000 rw-p 00009000 08:02 135297242 /usr/lib64/libdrm_amdgpu.so.1.0.0
      7fb119b52000-7fb119b5d000 r-xp 00000000 08:02 135297248 /usr/lib64/libdrm_radeon.so.1.0.1
      7fb119b5d000-7fb119d5c000 ---p 0000b000 08:02 135297248 /usr/lib64/libdrm_radeon.so.1.0.1
      7fb119d5c000-7fb119d5d000 r--p 0000a000 08:02 135297248 /usr/lib64/libdrm_radeon.so.1.0.1
      7fb119d5d000-7fb119d5e000 rw-p 0000b000 08:02 135297248 /usr/lib64/libdrm_radeon.so.1.0.1
      7fb119d5e000-7fb119d65000 r-xp 00000000 08:02 135297246 /usr/lib64/libdrm_nouveau.so.2.0.0
      7fb119d65000-7fb119f64000 ---p 00007000 08:02 135297246 /usr/lib64/libdrm_nouveau.so.2.0.0
      7fb119f64000-7fb119f65000 r--p 00006000 08:02 135297246 /usr/lib64/libdrm_nouveau.so.2.0.0
      7fb119f65000-7fb119f66000 rw-p 00007000 08:02 135297246 /usr/lib64/libdrm_nouveau.so.2.0.0
      7fb119f66000-7fb11aaf1000 r-xp 00000000 08:02 135396881 /usr/lib64/dri/swrast_dri.so
      7fb11aaf1000-7fb11acf1000 ---p 00b8b000 08:02 135396881 /usr/lib64/dri/swrast_dri.so
      7fb11acf1000-7fb11ad5a000 r--p 00b8b000 08:02 135396881 /usr/lib64/dri/swrast_dri.so
      7fb11ad5a000-7fb11ad63000 rw-p 00bf4000 08:02 135396881 /usr/lib64/dri/swrast_dri.so
      7fb11ad63000-7fb11af5c000 rw-p 00000000 00:00 0
      7fb11af5c000-7fb11afbc000 r-xp 00000000 08:02 134335151 /usr/lib64/libpcre.so.1.2.0
      7fb11afbc000-7fb11b1bc000 ---p 00060000 08:02 134335151 /usr/lib64/libpcre.so.1.2.0
      7fb11b1bc000-7fb11b1bd000 r--p 00060000 08:02 134335151 /usr/lib64/libpcre.so.1.2.0
      7fb11b1bd000-7fb11b1be000 rw-p 00061000 08:02 134335151 /usr/lib64/libpcre.so.1.2.0
      7fb11b1be000-7fb11b1ce000 r-xp 00000000 08:02 135297240 /usr/lib64/libdrm.so.2.4.0
      7fb11b1ce000-7fb11b3cd000 ---p 00010000 08:02 135297240 /usr/lib64/libdrm.so.2.4.0
      7fb11b3cd000-7fb11b3ce000 r--p 0000f000 08:02 135297240 /usr/lib64/libdrm.so.2.4.0
      7fb11b3ce000-7fb11b3cf000 rw-p 00010000 08:02 135297240 /usr/lib64/libdrm.so.2.4.0
      7fb11b3cf000-7fb11b3d4000 r-xp 00000000 08:02 135895614 /usr/lib64/libXxf86vm.so.1.0.0
      7fb11b3d4000-7fb11b5d3000 ---p 00005000 08:02 135895614 /usr/lib64/libXxf86vm.so.1.0.0
      7fb11b5d3000-7fb11b5d4000 r--p 00004000 08:02 135895614 /usr/lib64/libXxf86vm.so.1.0.0Aborted (core dumped)


      To reproduce this:

      1. Clone https://github.com/beryx-gist/badass-runtime-example-javafx on a Linux system
      2. Execute ./gradlew jpackage with JDK-15
      3. Install RPM created in build/jpackage
      4. Run the image from /opt/hellofx/bin/hellofx

        1. gdb-crash-stacktrace.txt
          5 kB
          Alexey Semenyuk
        2. launch.c
          1 kB
          Alexey Semenyuk

            Assignee:
            Alexey Semenyuk
            Reporter:
            Abhinay Agarwal
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: