8254702: jpackage app launcher crashes on CentOS