src/jdk.jpackage/linux/native/applauncher/LinuxPackage.c
@@ -130,10 +130,17 @@ static int popenCommand(const char* cmdlineFormat, const char* arg,
         goto cleanup;
     }
 
+#if defined(__GNUC__) && __GNUC__ >= 5
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wformat-nonliteral"
+#endif
     if (0 > snprintf(cmdline, cmdlineLenth, cmdlineFormat, arg)) {
         JP_LOG_ERRNO;
         goto cleanup;
     }
+#if defined(__GNUC__) && __GNUC__ >= 5
+#pragma GCC diagnostic pop
+#endif
 
     JP_LOG_TRACE("popen: (%s)", cmdline);
 
